--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
         </activity>
         <activity android:name=".CalendarActivity" />
         <activity android:name=".ShareActivity" />
+        <activity android:name=".DrawingActivity" />
 
 
     </application>
