--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
         </activity>
         <activity android:name=".MainActivity" />
         <activity android:name=".CalendarActivity" />
-        <activity android:name=".GalleryActivity" />
+        <activity android:name=".TimelineActivity" />
         <activity android:name=".DrawingActivity" />
 
 
