--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,8 @@
         <activity android:name=".CalendarActivity" />
         <activity android:name=".ShareActivity" />
         <activity android:name=".DrawingActivity" />
+        <activity android:name=".MotionActivity" />
+        <activity android:name=".ImageCropActivity" />
         <provider
             android:authorities="com.example.paint.fileprovider"
             android:name="androidx.core.content.FileProvider"
