--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 
     <application
+        android:name=".PrefApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -26,8 +27,6 @@
         <activity android:name=".CalendarActivity" />
         <activity android:name=".GroupActivity" />
         <activity android:name=".DrawingActivity" />
-
-
     </application>
 
 </manifest>
