--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,6 @@ plugins {
     id 'kotlin-android'
     id 'kotlin-android-extensions'
     id 'com.google.gms.google-services'
-//    id 'com.google.gms.google-services'
 }
 
 android {
@@ -50,6 +49,8 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.6.0-native-mt'
     implementation 'org.tensorflow:tensorflow-lite:+'
     implementation 'com.squareup.picasso:picasso:2.5.2'
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
     implementation 'com.google.gms:google-services:4.3.10'
     implementation 'com.google.android.gms:play-services-auth:20.1.0'
     implementation "androidx.recyclerview:recyclerview:1.2.1"
