--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
         <activity android:name=".CalendarActivity" />
         <activity android:name=".GroupActivity" />
         <activity android:name=".DrawingActivity" />
-        <activity android:name=".ImageCropActivity" />
+        <activity android:name=".CropActivity" />
         <activity android:name=".MotionActivity" />
         <provider
             android:authorities="com.example.paint.fileprovider"
