커뮤니티 구현
좋아요버튼, 그룹별 타임라인, 프로필사진 구현 완료

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,7 @@
         <activity android:name=".DrawingActivity" />
         <activity android:name=".ImageCropActivity" />
         <activity android:name=".MotionActivity" />
+        <activity android:name=".DiarytimelineActivity"/>
         <provider
             android:authorities="com.example.paint.fileprovider"
             android:name="androidx.core.content.FileProvider"
