--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,7 +15,7 @@ android {
 
     defaultConfig {
         applicationId "com.example.picturediary"
-        minSdk 30
+        minSdk 24
         targetSdk 32
         versionCode 1
         versionName "1.0"
@@ -54,8 +54,9 @@ dependencies {
     implementation 'com.google.android.gms:play-services-auth:20.1.0'
     implementation "androidx.recyclerview:recyclerview:1.2.1"
     implementation 'androidx.cardview:cardview:1.0.0'
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.0'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.1'
 
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
