--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,7 @@ android {
 dependencies {
     // https://stickode.tistory.com/184
     implementation "androidx.room:room-runtime:2.4.2"
+    implementation "com.google.code.gson:gson:2.8.6"
     kapt "androidx.room:room-compiler:2.4.2"
 
     implementation 'com.google.firebase:firebase-auth-ktx:21.0.3'
@@ -76,4 +77,5 @@ dependencies {
     testImplementation 'junit:junit:'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    debugImplementation 'com.amitshekhar.android:debug-db:1.0.6'
 }
