--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,7 @@
         <activity android:name=".GroupActivity" />
         <activity android:name=".DrawingActivity" />
         <activity android:name=".CropActivity" />
+        <activity android:name=".TextActivity" />
         <provider
             android:authorities="com.example.paint.fileprovider"
             android:name="androidx.core.content.FileProvider"
