내장 DB에 그림 저장 및 업데이트

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
         </activity>
         <activity android:name=".MainActivity" />
         <activity android:name=".CalendarActivity" />
-        <activity android:name=".GroupActivity" />
+        <activity android:name=".FragmentActivity" />
         <activity android:name=".DrawingActivity" />
         <activity android:name=".CropActivity" />
         <provider
