--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,7 @@
         <activity android:name=".DrawingActivity" />
         <activity android:name=".CropActivity" />
         <activity android:name=".TextActivity" />
+        <activity android:name=".DiarytimelineActivity"/>
         <provider
             android:authorities="com.example.paint.fileprovider"
             android:name="androidx.core.content.FileProvider"
