--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
         <activity android:name=".DrawingActivity" />
         <activity android:name=".CropActivity" />
         <activity android:name=".TextActivity" />
-        <activity android:name=".DiarytimelineActivity"/>
+        <activity android:name=".TimelineActivity"/>
         <activity android:name=".AnimExamActivity"/>
         <provider
             android:authorities="com.example.paint.fileprovider"
