--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
 
     <application
         android:name=".PrefApplication"
-        android:allowBackup="true"
+        android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
@@ -25,10 +25,12 @@
         </activity>
         <activity android:name=".MainActivity" />
         <activity android:name=".CalendarActivity" />
-        <activity android:name=".GroupActivity" />
+        <activity android:name=".FragmentActivity" />
         <activity android:name=".DrawingActivity" />
         <activity android:name=".CropActivity" />
-        <activity android:name=".TestActivity" />
+        <activity android:name=".TextActivity" />
+        <activity android:name=".TimelineActivity"/>
+        <activity android:name=".AnimExamActivity"/>
         <provider
             android:authorities="com.example.paint.fileprovider"
             android:name="androidx.core.content.FileProvider"
