--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,6 +84,8 @@ dependencies {
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.24'
 
+    implementation 'dev.bmcreations:scrcast:0.3.0'
+
     implementation 'io.ktor:ktor-server-netty:1.6.0'
     implementation 'io.ktor:ktor-network:1.6.0'
 
