--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,7 @@
         <activity android:name=".TextActivity" />
         <activity android:name=".TimelineActivity"/>
         <activity android:name=".AnimExamActivity"/>
+        <activity android:name=".MotionActivity"/>
         <provider
             android:authorities="com.example.paint.fileprovider"
             android:name="androidx.core.content.FileProvider"
