--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,11 +84,12 @@ dependencies {
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.24'
 
+    implementation 'dev.bmcreations:scrcast:0.3.0'
+
     implementation 'io.ktor:ktor-server-netty:1.6.0'
     implementation 'io.ktor:ktor-network:1.6.0'
 
     testImplementation 'junit:junit:'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    implementation "org.jetbrains.kotlin:kotlin-script-runtime:1.6.10"
 }
